--- a/travis_ci/.travis.yml
+++ b/travis_ci/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t simple-node .
-  - docker tag simple-node tuyojr/simple-node:latest
+  - docker tag simple-node tuyojr/simple-node
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
