--- a/travis_ci/.travis.yml
+++ b/travis_ci/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple_node .
+  - docker build -t simple-node . -f simple_node.Dockerfile
   - docker tag simple_node tuyojr/simple-node:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
