--- a/travis_ci/.travis.yml
+++ b/travis_ci/.travis.yml
@@ -14,10 +14,11 @@ before_script:
   - echo "no tests"
 
 script:
-  - docker --version # print the version for logging
+  # print the version for logging
+  - docker --version
   - docker build -t simple-node .
-  - docker tag simple-node YOUR_DOCKER_HUB/simple-node:latest
+  - docker tag simple-node tuyojr/simple-node:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push YOUR_DOCKER_HUB/simple-node
+  - docker push tuyojr/simple-node
